# 3d_interact

./: 2q  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  \  a.out  cmake_install.cmake  depth.cpp  proj
include/proj/: etc.hpp
src/: etc.cpp  main.cpp
test_field/: CMakeCache.txt  CMakeLists.txt  Game  Makefile  a.out  clean_str.c  cmake_install.cmake  double_fork.c  event  gl  input_event.c  miniterm  miniterm.c  miniterm_pthread.c  physx.cpp  test  test.c
test_field/opengl/cube_1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cube_turn  cube_turn.cpp
test_field/opengl/cube_2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  glwidget.h  qtgl.cpp
test_results_log/: cloud_min_max.txt
unity3d/TEST/: Assembly-CSharp.csproj  TEST.sln
unity3d/TEST/Assets/Materials/: not_picked.mat  picked.mat
unity3d/TEST/Assets/Scenes/: SampleScene.unity
unity3d/TEST/Temp/: UnityTempFile-074bf47be9c590ce0839eaa67930fec9  UnityTempFile-233bdb64552be44da89b5296c4eaecab  UnityTempFile-2d6a209b7f597cced8ef9fdba9c2a62e  UnityTempFile-33232fe473e7a4e95a2f13ce58d1c8f5  UnityTempFile-40eb141136a7c30b7886594f79406eb3  UnityTempFile-49db2e8f2a34d59f69dd1789bdb77882  UnityTempFile-5206cc1e7005346e2b03c75c553f4fd0  UnityTempFile-633423dc5ef3b57e0abe583e8343781c  UnityTempFile-6641762335eb1b7acb2fb4b5b8bbcf7c  UnityTempFile-70f2467c39231540f98a9c7f9442fd60  UnityTempFile-bf763efb4eb300b8497ac1136bf74dfd  UnityTempFile-c09e117169f5fbf6786603f77b1d6aaa  UnityTempFile-c57c50e3e694078b3b711fa90c4d13b7  UnityTempFile-dbac561fdcc17de039d384d6609ce0d1  UnityTempFile-dd00f2ff88a372fb9b226b39c511ba9b  UnityTempFile-defd0308a12b64d4d83c78e2d6398d11  UnityTempFile-e48c9c655a38280f6ac3eaeef5969ba0  UnityTempFile-f033e4a0b8baaa697b94421dad5a9ccb
unity_bin/TEST2_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets
unity_bin/TEST2_Data/Resources/: unity_builtin_extra
(+3 files in other folders)
